# homestead-server

./: .gitignore  Cargo.toml  README  notes.org
src/: main.rs
templates/: base.html  config.html  device_table.html
